# calculadora-python-pytest

./: README.md  pyproject.toml
src/calculadora/: Calculadora.py  Divisao.py  Divisão.py  Multiplicacao.py  Operacao.py  Soma.py  Subtracao.py  main.py
tests/: test_funcional.py  test_integracao.py  test_unitario.py
