[project]
name = "calculadora"
version = "0.1.0"
description = ""
authors = [
    {name = "jcarlossc",email = "josecscosta@fac.pe.senac.br"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "calculadora", from = "src"}]

[tool.poetry.scripts]
calc = "calculadora.main:main"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
