[project]
name = "calculadora"
version = "0.1.0"
description = "Estudo sobre testes unitários, de integração e funcional."
authors = [
    {name = "jcarlossc",email = "jcarlossc1977@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "calculadora", from = "src"}]

[tool.poetry.scripts]
calc = "calculadora.main:main"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
